--- a/src/static/index.html
+++ b/src/static/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <% if (htmlWebpackPlugin.files.favicon) { %>
-    <link rel="shortcut icon" href="<%=htmlWebpackPlugin.files.favicon%>">
+    <link rel="icon" href="<%=htmlWebpackPlugin.files.favicon%>">
     <% } %>
 
     <% for (var css in htmlWebpackPlugin.files.css) { %>
